--- a/index.html
+++ b/index.html
@@ -1,167 +1,17 @@
-<html>
-
-<head>
-
-<title>Computer science Solution cover page</title>
-
-</head>
-
-<body lang=EN-GB link=blue vlink=purple>
-
-<h2 align=center style='text-align:center'><span>Computer science Solutions cover page</span></h2>
-
-<table>
-<tr>
-<td width=320 colspan=2><p><b>Candidate name:</b> A Student (add your details here)</p></td>
-<td width=400><p><b>School number:&nbsp &nbsp &nbsp</b><u>000001</u></p></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Solution title:</b> Grammar Game</p></td>
-<td width=400><p><b>Candidate session number: </b><u>jfl782</u></p></td>
-<td width=200></td>
-<tr>
-
-<tr height = '30'>
-<td width=320 colspan=2></p></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>User name:</b> xxxxxxxxxx (add details here)</p></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-
-
-<tr>
-<td width=320 height=50 colspan=2><p><b>Links to:</b> <a href="Product">Product</a></p></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr height=20>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 height=50 colspan=2 valign='top'><p><b>Directions to access product or any other additional information</b></p></td>
-<td width=400 height=70 bgcolor="gray" valign='top'><p> </p>If the product does not load, please go to the Product folder and click on index.htm (edit as required)</td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><i>Links to documentation are below</i></p></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr height=20>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Planning</b></p></td>
-<td width=400><a href="Documentation/Crit_A_Planning.pdf">Planning</a></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Design</b></p></td>
-<td width=400><a href="Documentation/Crit_B_Record_of_tasks.pdf">Record of tasks</a> (use form)</td><tr>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b></b></p></td>
-<td width=400><a href="Documentation/Crit_B_Design.pdf">Design</a></td><tr>
-<td width=200></td>
-<tr>
-
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Development</b></p></td>
-<td width=400><a href="Documentation/Crit_C_Development.pdf">Development</a></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Functionality (additional videos may be added)</b></p></td>
-<td width=400><a href="Documentation/Crit_D_Video.mp4">Video of product</a></td>
-<td width=200></td>
-<tr>
-
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Evaluation</b></p></td>
-<td width=400><a href="Documentation/Crit_E_Evaluation.pdf">Evaluation</a></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2><p><b>Appendix / appendices</b></p></td>
-<td width=400><a href="Documentation/Appendix.pdf">Appendix</a></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=100></td>
-<td width=220></td>
-<td width=400></td>
-<td width=200></td>
-<tr>
-
-<tr>
-<td width=320 colspan=2 height='70'><p><b>WORD COUNT</b></p></td>
-<td width=400><p><b>1997</b></p></td>
-<td width=200></td>
-<tr>
-
-
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <title>Elijah Walker - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
